--- a/index.html
+++ b/index.html
@@ -8,13 +8,65 @@
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- /GOOGLE FONT -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section>
-        
-    </section>
+    <main class="container">
+        <h1>Meet Our Team</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium debitis unde eius iusto rerum illo perferendis architecto rem quis fugit, tempore vitae dolorum necessitatibus delectus facere in aspernatur similique dolorem.</p>
+        <div class="clearfix">
+            <div class="card clearfix margin">
+                <img src="img/male1.png" alt="male1">
+                <div class="description">
+                    <h3> MARCO BIANCHI</h3>
+                    <h4> Designer</h4>
+                    <a href="mailto:someone@yoursite.com">marcobianchi@team.com</a>  
+                </div>
+            </div>
+            <div class="card clearfix margin">
+                <img src="img/female1.png" alt="male1">
+                <div class="description">
+                    <h3> LAURA ROSSI</h3>
+                    <h4> Front-end Developer</h4>
+                    <a href="mailto:someone@yoursite.com">laurarossi@team.com</a>  
+                </div>
+            </div>
+            <div class="card clearfix margin">
+                <img src="img/male2.png" alt="male1">
+                <div class="description">
+                    <h3> GIORGIO VERDI</h3>
+                    <h4> Back-end Developer</h4>
+                    <a href="mailto:someone@yoursite.com">giorgioverdi@team.com</a>  
+                </div>
+            </div>
+            <div class="card clearfix margin">
+                <img src="img/female2.png" alt="male1">
+                <div class="description">
+                    <h3> MARTA IPSUM</h3>
+                    <h4 id="marta"> SEO Specialist</h4>
+                    <a href="mailto:someone@yoursite.com">martaipsum@team.com</a>  
+                </div>
+            </div>
+            <div class="card clearfix margin">
+                <img src="img/male3.png" alt="male1">
+                <div class="description">
+                    <h3> ROBERTO LOREM</h3>
+                    <h4> Project Manager</h4>
+                    <a href="mailto:someone@yoursite.com">robertolorem@team.com</a>  
+                </div>
+            </div>
+            <div class="card clearfix margin">
+                <img src="img/female3.png" alt="male1">
+                <div class="description">
+                    <h3> DANIELA AMET</h3>
+                    <h4> Analyst</h4>
+                    <a href="mailto:someone@yoursite.com">danieleamet@team.com</a>  
+                </div>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
